<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />



    <item
        android:id="@+id/nav_nearby_events"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_nearby_events" />

    <item
        android:id="@+id/nav_create_event"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_create_event" />

    <item
        android:id="@+id/nav_manage_events"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_manage_events"
        android:visible="false" />
</menu>